# firebox

./: .gitignore  Cargo.toml  README.md
crates/firebox-api/: Cargo.toml
crates/firebox-api/src/: config.rs  dto.rs  error.rs  main.rs
crates/firebox-api/src/handlers/: mod.rs  vms.rs
crates/firebox-cli/: Cargo.toml
crates/firebox-cli/src/: client.rs  dto.rs  format.rs  main.rs
crates/firebox-core/: Cargo.toml
crates/firebox-core/src/: config.rs  core.rs  error.rs  lib.rs
crates/firebox-store/: Cargo.toml
crates/firebox-store/src/: lib.rs  memory.rs  store.rs
crates/firebox-vmm/: Cargo.toml
crates/firebox-vmm/src/: firecracker.rs  lib.rs  stub.rs
specs/: api.md  architecture.md  cli.md  configuration.md  firecracker_integration.md  firecracker_vmm.md  implementation-plan.md  vm-lifecycle.md
