[package]
name = "firebox-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "firebox-daemon"
path = "src/main.rs"

[dependencies]
firebox-core  = { workspace = true }
firebox-store = { workspace = true }
firebox-vmm   = { workspace = true }
actix-web     = "4"
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config        = "0.14"
thiserror     = { workspace = true }

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
