[package]
name = "firebox-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "firebox"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
reqwest     = { version = "0.12", features = ["json", "blocking"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
thiserror   = { workspace = true }
