[package]
name = "firebox-core"
version = "0.1.0"
edition = "2021"

[dependencies]
firebox-store = { workspace = true }
firebox-vmm   = { workspace = true }
serde         = { workspace = true }
tokio         = { workspace = true }
uuid          = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
libc          = "0.2"
