[package]
name = "firebox-vmm"
version = "0.1.0"
edition = "2021"

[dependencies]
firebox-store = { workspace = true }
async-trait   = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
hyper         = { version = "0.14", features = ["full"] }
hyperlocal    = "0.8"
http          = "0.2"
serde         = { workspace = true }
serde_json    = { workspace = true }
libc          = "0.2"

[dev-dependencies]
tokio = { workspace = true }
